# test-crate

./: .gitignore  .justfile  .markdownlint.yaml  .yamllint  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  cog.toml
.cargo/: config.toml
.claude/: CLAUDE.md
.claude/rules/: commit-messages.md
.claude/skills/markdown-authoring/: SKILL.md
.github/actions/bot-setup/: bot-setup.yml
.github/workflows/: bump.yml  ci.yml  dependabot-issues.yml  release.yml
crates/test-crate/: CHANGELOG.md  Cargo.toml
crates/test-crate-core/: Cargo.toml
crates/test-crate-core/src/: lib.rs
crates/test-crate/src/: lib.rs  main.rs
crates/test-crate/src/commands/: info.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/commands/: install.rs  man.rs
