[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
homepage.workspace = true

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
clap_mangen = "0.2.31"
test-crate = { path = "../crates/test-crate" }
test-crate-core = { path = "../crates/test-crate-core" }
