[package]
name = "test-crate-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for test-crate"
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
thiserror = "2.0"
